[project]
name = "llama-cpp_vlm-f"
description = "Run LLM/VLM models natively in ComfyUI based on llama.cpp"
version = "1.2.6+mod1"
license = {file = "LICENSE"} 
classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
     "Operating System :: Microsoft :: Windows",  # Windows specific
     "Operating System :: POSIX :: Linux",  # Linux specific
     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
     "Environment :: GPU :: Apple Metal",    # Apple Metal support
]

dependencies = ["diskcache", "scipy", "numpy", "pillow", "gguf"]

[project.urls]
Repository = "https://github.com/id-fa/ComfyUI-llama-cpp_vlm"

[tool.comfy]
PublisherId = "id-fa"
DisplayName = "llama-cpp_vlm-f"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
Repository = "https://github.com/id-fa/ComfyUI-llama-cpp_vlm"

